# rag-lora-stable-diffusion-seeds

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements-app.txt  requirements-colab.txt  requirements-core.txt  requirements-lora-colab.txt  requirements-rag.txt  requirements-vision.txt  requirements.txt
.github/: pull_request_template.md
app/: app.py  streamlit_app.py
codex/: 00_PROMPT_MAESTRO.md  01_AUDITORIA_DATASET.md  02_ETIQUETADO_SPLIT.md  03_ENTRENAMIENTO_VISUAL.md  04_PREPARACION_LORA.md  05_ENTRENAMIENTO_LORA_SD15.md  06_CONSTRUCCION_RAG.md  07_INTEGRACION_APP.md  08_EVALUACION_DOCUMENTACION.md  README.md
configs/: dataset.yaml  lora_sd15.yaml  lora_sd15_config.yaml  production_vision_model.yaml  project.yaml  rag.yaml  rag_config.yaml  report.yaml  report_config.yaml  synthetic_generation.yaml  vision.yaml  vision_config.yaml  vision_experiments.yaml  vision_v2_efficientnet_b0.yaml  vision_v2_resnet18.yaml
data/: README.md
docs/: 00_RESUMEN_EJECUTIVO.md  00_RESUMEN_PARA_EL_EQUIPO.md  01_ALCANCE_Y_ARQUITECTURA.md  01_ARQUITECTURA.md  02_ADQUISICION_Y_AUDITORIA_DATASET.md  02_PLAN_PASO_A_PASO.md  03_CUMPLIMIENTO_ENTRENAMIENTO.md  03_PLAN_DE_ENTRENAMIENTO.md  04_GITHUB_DESDE_CERO.md  04_PLAN_RAG_E_INFORMES.md  05_EVALUACION_Y_EXPERIMENTOS.md  05_METODOLOGIA_DATASET.md  06_ETICA_Y_LIMITACIONES.md  06_METRICAS.md  07_ETICA_LIMITACIONES.md  07_GITHUB_Y_TRABAJO_EN_EQUIPO.md  08_CRONOGRAMA_7_DIAS.md  09_GUIA_CODEX.md  10_ESTRUCTURA_INFORME_IEEE.md  RUNBOOK.md  (+21 more)
(+369 files in other folders)
